--- a/FinalProject/Views/Blogs/Blog.cshtml
+++ b/FinalProject/Views/Blogs/Blog.cshtml
@@ -85,28 +85,16 @@
                 <!-- Post Pagination-->
                 <nav class="rn-pagination">
                     <ul>
-                        <li>
-                            <a href="#">
-                                <i class="fas fa-angle-left"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a class="rn-active" href="#">1</a>
-                        </li>
-                        <li>
-                            <a href="#">2</a>
-                        </li>
-                        <li>
-                            <a href="#">3</a>
-                        </li>
-                        <li>
-                            <a href="#">4</a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fas fa-angle-right"></i>
-                            </a>
-                        </li>
+                        @for (int i = 0; i <= (decimal)ViewData["Pagecount"]; i++)
+                        {
+                            <li>
+                                <a class="" asp-action="blog" asp-controller="blogs" asp-route-p ="@(i + 1)">@(i+1)</a>
+                            </li>
+                        }
+
+
+                       
+                       
                     </ul>
                 </nav>
 
