--- a/FinalProject/Views/Cars/Detail.cshtml
+++ b/FinalProject/Views/Cars/Detail.cshtml
@@ -31,7 +31,7 @@
                 <div class="rn-car-single-price">
                     <span class="rn-car-price-from">From</span>
                     <span class="rn-car-price-format">
-                        <span class="rn-car-price-amount">$@Model.DailyPrice.ToString("#.00")</span>
+                        <span class="rn-car-price-amount">$@Model.DailyPrice.ToString("#.")</span>
                         <span class="rn-car-price-per">/day</span>
                     </span>
                 </div>
