--- a/FinalProject/Views/Customers/Create.cshtml
+++ b/FinalProject/Views/Customers/Create.cshtml
@@ -2,62 +2,124 @@
 
 @{
     ViewData["Title"] = "Create";
+    Layout = null;
 }
 
+<!DOCTYPE html>
+<html lang="en">
 
-<div class="container" style="margin:50px auto">
-    <div class="row">
-        <div class="col-md-4">
-            <form asp-action="Create">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="Name" class="control-label"></label>
-                    <input asp-for="Name" class="form-control" />
-                    <span asp-validation-for="Name" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Surname" class="control-label"></label>
-                    <input asp-for="Surname" class="form-control" />
-                    <span asp-validation-for="Surname" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Email" class="control-label"></label>
-                    <input asp-for="Email" class="form-control" />
-                    <span asp-validation-for="Email" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Password" class="control-label"></label>
-                    <input asp-for="Password" class="form-control" />
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Country" class="control-label"></label>
-                    <select asp-for="Country" class="form-control"></select>
-                    <span asp-validation-for="Country" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="StreetAdress" class="control-label"></label>
-                    <input asp-for="StreetAdress" class="form-control" />
-                    <span asp-validation-for="StreetAdress" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Postalcode" class="control-label"></label>
-                    <input asp-for="Postalcode" class="form-control" />
-                    <span asp-validation-for="Postalcode" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Age" class="control-label"></label>
-                    <input asp-for="Age" class="form-control" />
-                    <span asp-validation-for="Age" class="text-danger"></span>
-                </div>
+<head>
 
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>SB Admin 2 - Register</title>
+
+    <!-- Custom fonts for this template-->
+    <link href="~/AdminDashboard/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+
+    <!-- Custom styles for this template-->
+    <link href="~/AdminDashboard/css/sb-admin-2.min.css" rel="stylesheet">
+
+</head>
+
+<body class="bg-gradient-primary">
+
+    <div class="container">
+
+        <div class="card o-hidden border-0 shadow-lg my-5">
+            <div class="card-body p-0">
+                <!-- Nested Row within Card Body -->
+                <div class="row">
+                    <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
+                    <div class="col-lg-7">
+                        <div class="p-5">
+                            <div class="text-center">
+                                <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
+                            </div>
+                            <form class="user" asp-action="Create" method="post">
+                                <div asp-validation-summary="ModelOnly"></div>
+                                <div class="form-group row">
+                                    <div class="col-sm-6 mb-3 mb-sm-0">
+                                        <label asp-for="Name" class="control-label"></label>
+                                        <input type="text" asp-for="Name" class="form-control form-control-user" id="exampleFirstName" placeholder="First Name">
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <label asp-for="Surname" class="control-label"></label>
+                                        <input type="text" asp-for="Surname" class="form-control form-control-user" id="exampleLastName" placeholder="Last Name">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Email" class="control-label"></label>
+                                    <input type="email" asp-for="Email" class="form-control form-control-user" id="exampleInputEmail" placeholder="Email Address">
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="StreetAdress" class="control-label"></label>
+                                    <input type="text" asp-for="StreetAdress" class="form-control form-control-user" id="exampleInputEmail" placeholder="Street Adress">
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Postalcode" class="control-label"></label>
+                                    <input type="text" asp-for="Postalcode" class="form-control form-control-user" id="exampleInputEmail" placeholder="Postal Code">
+                                </div>
+                                <div class="form-group ">
+                                    <label asp-for="Password" class="control-label"></label>
+                                    <input type="password" asp-for="Password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Password">
+                                </div>
+                                <div class="form-group ">
+                                    <label asp-for="Age" class="control-label"></label>
+                                    <input type="number" asp-for="Age" class="form-control form-control-user" id="exampleInputPassword" placeholder="Age">
+                                </div>
+                                <div class="form-group row">
+                                    <div class="col-sm-6 mb-3 mb-sm-0">
+                                        <div class="form-group">
+                                            <label asp-for="Country" class="control-label"></label>
+                                            <select asp-for="Country" class="form-control">
+                                                <option value="0">Azerbaijan</option>
+                                                <option value="1">Georgia</option>
+                                                <option value="2">Turkey</option>
+                                                <option value="3">Russia</option>
+                                            </select>
+                                            <span asp-validation-for="Country" class="text-danger"></span>
+                                        </div>
+                                    </div>
+
+                                </div>
+                                <button asp-action="Create" asp-controller="Customers" class="btn btn-primary btn-user btn-block">
+                                Register Account
+                            </button>
+                            </form>
+                            <hr>
+                            
+                            <div class="text-center">
+                                <a class="small" asp-action="Login" asp-controller="Customers">Already have an account? Login!</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </form>
+            </div>
         </div>
+
     </div>
 
-  
+    <!-- Bootstrap core JavaScript-->
+    <script src="~/AdminDashboard/vendor/jquery/jquery.min.js"></script>
+    <script src="~/AdminDashboard/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-</div>
+    <!-- Core plugin JavaScript-->
+    <script src="~/AdminDashboard/vendor/jquery-easing/jquery.easing.min.js"></script>
+
+    <!-- Custom scripts for all pages-->
+    <script src="~/AdminDashboard/js/sb-admin-2.min.js"></script>
+
+</body>
+
+</html>
+
+
+
+
+
