--- a/FinalProject/Views/Shared/Components/Header/Default.cshtml
+++ b/FinalProject/Views/Shared/Components/Header/Default.cshtml
@@ -152,7 +152,7 @@
 
                                     </li>
                                     <li>
-                                        <a asp-action="Gallery" asp-controller="Pages">
+                                        <a asp-action="Login" asp-controller="Customers">
                                             Customer Login
                                         </a>
 
