--- a/FinalProject/Views/Shared/Components/Header/Default.cshtml
+++ b/FinalProject/Views/Shared/Components/Header/Default.cshtml
@@ -121,7 +121,7 @@
                                     </li>
 
                                     <li>
-                                        <a href="checkout.html">Checkout</a>
+                                        <a asp-action="Checkout" asp-controller="Pages">Checkout</a>
                                     </li>
                                     <li>
                                         <a href="cart.html">Cart</a>
