--- a/FinalProject/Views/Pages/Checkout.cshtml
+++ b/FinalProject/Views/Pages/Checkout.cshtml
@@ -2,17 +2,28 @@
 @{
     ViewData["Title"] = "Checkout";
 }
-
+<!-- Page Title-->
+<div class="rn-page-title">
+    <div class="rn-pt-overlayer"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="rn-page-title-inner">
+                    <h1>Checkout</h1>
+                    <p>Cras eros lorem, rhoncus ac risus sit amet, fringilla ultrices purus.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End Page Title-->
 <!-- Page Content-->
 <section class="rn-section">
     <div class="container mb-10">
         <div class="row">
-            
+
             <div class="col-lg-6">
-                <div class="rn-input-group">
-                    <label>Order notes (optional)</label>
-                    <textarea></textarea>
-                </div>
+
 
                 <!-- Checkout Form-->
                 <div class="rn-checkout-items">
@@ -21,120 +32,42 @@
                         <!-- Checkout Item-->
                         <div class="rn-checkout-item">
                             <div class="rn-checkout-item-thumb">
-                                <img class="img-fluid" src="assets/images/@item.Car.Photo" alt="@item.Car.Model.CarBrand.Name" />
+                                <img class="img-fluid" src="~/images/@item.Car.Photo" alt="@item.Car.Model.Name" />
                             </div>
                             <div class="rn-checkout-item-info">
                                 <div class="rn-checkout-item-title-price">
                                     <h2>
-                                        <a href="car-single.html">@item.Car.Model.CarBrand.Name</a>
+                                        <a href="car-single.html">@item.Car.Model.Name</a>
                                     </h2>
-                                    <span>@item.Car.DailyPrice/day</span>
                                 </div>
                                 <div class="rn-locations">
                                     <div class="rn-pickup-location">
                                         <div class="rn-location">@item.Order.PickupLocation</div>
-                                        <div class="rn-date-n-time">@item.Order.PickupDate.ToString("MMMM/dd/yyyy HH:mm")</div>
+                                        <div class="rn-date-n-time">@item.Order.PickupDate.ToString("MM/dd/yyyy")</div>
                                     </div>
                                     <div class="rn-drop-location">
                                         <div class="rn-location">@item.Order.DropLocation</div>
-                                        <div class="rn-date-n-time">@item.Order.DropDate.ToString("MMMM/dd/yyyy HH:mm")</div>
+                                        <div class="rn-date-n-time">@item.Order.DropDate.ToString("MM/dd/yyyy")</div>
                                     </div>
                                 </div>
-                                <div class="rn-checkout-item-extra">
-                                    <h3>Add extra services</h3>
-                                    <label class="rn-extra-service">
-                                        <span class="rn-extra-service-name">
-                                            <i class="fas fa-check"></i> Driver
-                                        </span>
-                                        <span class="rn-extra-service-price">+$100/Day</span>
-                                    </label>
-                                    <label class="rn-extra-service">
-                                        <span class="rn-extra-service-name">
-                                            <i class="fas fa-times"></i> Snacks
-                                        </span>
-                                        <span class="rn-extra-service-price">+$50/Day</span>
-                                    </label>
-                                </div>
+                                
                             </div>
                             <div class="rn-checkout-total-container">
-                                <div class="rn-cart-total">Total: $800.00</div>
+                                <div class="rn-cart-total">Total: $@item.Order.Total.ToString("#.")</div>
                             </div>
                         </div>
                         <!-- End Checkout Item-->
                     }
-
-                    <!-- Checkout Item-->
-                    <div class="rn-checkout-item">
-                        <div class="rn-checkout-item-thumb">
-                            <img class="img-fluid" src="assets/images/cart-item-2.jpg" alt="Cart Item" srcset="assets/images/cart-item-2.jpg 1x, assets/images/cart-item-2@2x.jpg 2x" />
-                        </div>
-                        <div class="rn-checkout-item-info">
-                            <div class="rn-checkout-item-title-price">
-                                <h2>
-                                    <a href="car-single.html">Toyta Corrola</a>
-                                </h2>
-                                <span>$700/day</span>
-                            </div>
-                            <div class="rn-locations">
-                                <div class="rn-pickup-location">
-                                    <div class="rn-location">New York</div>
-                                    <div class="rn-date-n-time">08/25/2018 8:00 AM</div>
-                                </div>
-                                <div class="rn-drop-location">
-                                    <div class="rn-location">Los Angeles</div>
-                                    <div class="rn-date-n-time">08/26/2018 8:00 AM</div>
-                                </div>
-                            </div>
-                            <div class="rn-checkout-item-extra">
-                                <h3>Add extra services</h3>
-                                <label class="rn-extra-service">
-                                    <span class="rn-extra-service-name">
-                                        <i class="fas fa-check"></i> Driver
-                                    </span>
-                                    <span class="rn-extra-service-price">+$100/Day</span>
-                                </label>
-                                <label class="rn-extra-service">
-                                    <span class="rn-extra-service-name">
-                                        <i class="fas fa-times"></i> Snacks
-                                    </span>
-                                    <span class="rn-extra-service-price">+$50/Day</span>
-                                </label>
-                            </div>
-                        </div>
-                        <div class="rn-checkout-total-container">
-                            <div class="rn-cart-total">Total: $800.00</div>
-                        </div>
-                    </div>
-                    <!-- End Checkout Item-->
-
-                    <div class="rn-checkout-subtotal">
-                        <strong>Subtotal:</strong>
-                        <span>$1600.00</span>
-                    </div>
-                    <div class="rn-checkout-discount">
-                        <strong>Discount:</strong>
-                        <span>$300.00</span>
-                    </div>
+                        
                     <div class="rn-checkout-total">
                         <strong>Total:</strong>
                         <span>$1300.00</span>
                     </div>
 
                     <!-- Payment Methods-->
-                    <div class="rn-payment-methods">
-                        <label class="rn-payment-method">
-                            <input type="radio" name="rn-payment">
-                            <span class="rn-payment-method-radio"></span>
-                            <span class="rn-payment-method-title">Paypal</span>
-                        </label>
-                        <label class="rn-payment-method">
-                            <input type="radio" name="rn-payment">
-                            <span class="rn-payment-method-radio"></span>
-                            <span class="rn-payment-method-title">Credit/Debit Card</span>
-                        </label>
-                    </div>
+                    
                     <div class="text-right">
-                        <input class="btn btn-main btn-lg btn-shadow" type="submit" value="Continue to payment">
+                        <a class="btn btn-main btn-lg btn-shadow" asp-action="Delete" asp-controller="Orders" asp-route-id ="@Model.Id">Delete Order</a>
                     </div>
                 </div>
                 <!-- End Checkout Form-->
